# rp2040-board

./: .gitmodules
firmware/: CMakeLists.txt
firmware/src/: display-demo.c  dmx512.pio  main.cpp  midi-joystick.c
firmware/src/crsf-bridge/: crsf-bridge.cpp
firmware/src/crsf-bridge/CRServoF/CrsfSerial/: CrsfSerial.h
firmware/src/crsf-to-midi/: crsf-to-midi.cpp
firmware/src/crsf-to-midi/CRServoF/: README.txt
firmware/src/crsf-to-midi/CRServoF/CrsfSerial/: CrsfSerial.cpp
firmware/src/dmx-controller/: dmx512.pio
firmware/src/midi-joystick/: midi-joystick.c  tusb_config.h  usb_descriptors.c
firmware/src/swing-propeller/: swing-propeller.c  usb_descriptors.c
pcb/: fp-lib-table  motor_drivers.kicad_sch  power.kicad_sch  rp2040-board.kicad_pcb  rp2040-board.kicad_pro  rp2040-board.kicad_sch
pcb/fab/: rp2040-board-B_Cu.gbl  rp2040-board-B_Mask.gbs  rp2040-board-B_Paste.gbp  rp2040-board-B_Silkscreen.gbo  rp2040-board-Edge_Cuts.gm1  rp2040-board-F_Cu.gtl  rp2040-board-F_Mask.gts  rp2040-board-F_Paste.gtp  rp2040-board-F_Silkscreen.gto  rp2040-board-In1_Cu.g2  rp2040-board-In2_Cu.g3  rp2040-board-NPTH-drl_map.gbr  rp2040-board-NPTH.drl  rp2040-board-PTH-drl_map.gbr  rp2040-board-PTH.drl  rp2040-board-bom.csv  rp2040-board-top-pos.csv
pcb/gfx.pretty/: robot1.kicad_mod
pcb/oled module.pretty/: i2c oled display 0.96 inch VCC GND.kicad_mod
